fix double border bug on jQuery UI spinner element

--- a/web/cobrands/zurich/base.scss
+++ b/web/cobrands/zurich/base.scss
@@ -225,6 +225,13 @@ h4.static-with-rule {
     }
 }
 
+.ui-spinner input {
+    // stop jQuery UI spinner inputs from inheriting FMS input styles
+    padding: 1px;
+    border: none;
+    border-radius: 0;
+}
+
 @media print {
     #site-header .container {
         position: relative;
